--- a/index.html
+++ b/index.html
@@ -84,6 +84,6 @@
     <p class="出力欄" id="出力欄"></p>
   </div>
 
-    <script src="test.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
