--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>【Desmos】関数ツール</title>
-    <link rel="icon" href="数学ロゴ.png">
+    <link rel="icon" href="logo.png">
     <style>
       body {
         font-family: sans-serif;
